# kvconfig_cpp

./: .gitignore  FindKVconfig.cmake  README.md  str_config_generator.py
src/: kv_config_base.cpp
src/kv_config/: kv_config_base.hpp
test/: CMakeLists.txt  test.cpp  test.json  test2.cpp
